--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@joi/date": "^2.1.1",
     "bcrypt": "^5.1.1",
     "confidence": "^5.0.1",
     "cors": "^2.8.5",
